traces/bug_175.txt
examples++-load/ff-AiryBiry.cpp:125: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/ff-AiryBiry.cpp:125:1: initialization of callDoLoadInit
123.      Global.Add("biry","(",new OneOperator2<double,double,long>( biry));
124.   }
125. > LOADFUNC(InitFF)

examples++-load/ff-AiryBiry.cpp:125:1: call to DoLoadInit
123.      Global.Add("biry","(",new OneOperator2<double,double,long>( biry));
124.   }
125. > LOADFUNC(InitFF)

examples++-load/ff-AiryBiry.cpp:125:1: call to addInitFunct
  123.      Global.Add("biry","(",new OneOperator2<double,double,long>( biry));
  124.   }
  125. > LOADFUNC(InitFF)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
